slide section in comlited

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@
   max-width: 100%;
   
 }
+body{
+  /* background-image: url('../src/components/asetss/Home/Aavesham-movie-review.jpg');
+  background-position: center;
+  background-size: cover; */
+}
